# sistema_etl_vendas

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: dashboard.py  main.py
tests/: test_pipeline.py
